# seoflow-ai

./: .gitignore  PRD.md  README.md  TESTING_GUIDE.md
backend/: alembic.ini  main.py  pyproject.toml
backend/agents/: content_agent.py  media_agent.py  publishing_agent.py  research_agent.py  seo_agent.py
backend/alembic/: env.py
backend/alembic/versions/: c488fa9391af_initial_schema.py
backend/api/: monitoring.py  workflows.py
backend/core/: notifications.py
backend/database/: models.py  session.py
backend/schemas/: briefs.py  workflows.py
backend/workflows/: graph.py  state.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/brief/new/: page.tsx
frontend/src/app/monitoring/: page.tsx
frontend/src/app/workflows/[id]/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/services/: api.ts
infra/: docker-compose.yml
n8n/workflows/: human_review_alert.json
